corrected alignment and position of elements. added experience and education segments

--- a/application/static/css/custom.css
+++ b/application/static/css/custom.css
@@ -24,3 +24,7 @@ section {
 .b-r {
     border-right: 4px solid #F8F9FA;
 }
+
+.external-profiles {
+    word-wrap: break-word;
+}
